More Cosmetic Changes

--- a/about.html
+++ b/about.html
@@ -1,14 +1,11 @@
----
-layout: default
-title: Razorblade Art - About
-class: navbar-fixed-bottom
----
+--- layout: default title: Razorblade Art - About class: navbar-fixed-bottom ---
 <section class="container-fluid">
-  <div class="row">
-  	<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 col-sm-12 col-xs-12 about lead">
-  		<h1 class="about__title">About</h1>
-  		<h3 class="about__subtitle">Acrylic - Mixed Media - Pen & Ink</h3>
-  		<p>Bearing the creative lineage of his father, Jeremy's<br>deep appreciation for art began at an early age.<br>He has many works in many different media.<br>He enjoys creating original works themed upon<br>anything from Classical Fairy Tales,<br>to the darkest of the dark.<br>Highlighting the unusual in the every day.<br>Bringing light to what is dark,<br>And dark to what is light.</p>
-  	</div>
-  </div>
+    <div class="row">
+        <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 col-sm-12 col-xs-12 about lead">
+            <h1 class="about__title">About</h1>
+            <h3 class="about__subtitle">Acrylic - Mixed Media - Pen & Ink</h3>
+            <p>Bearing the creative lineage of his father, Jeremy's<br>deep appreciation for art began at an early age.<br>He has many works in many different media.<br>He enjoys creating original works themed upon<br>anything from Classical Fairy Tales,<br>to
+                the darkest of the dark.<br>Highlighting the unusual in the every day.<br>Bringing light to what is dark,<br>And dark to what is light.</p>
+        </div>
+    </div>
 </section>
