--- a/index.html
+++ b/index.html
@@ -1,23 +1,20 @@
----
-layout: default
-title: Razorblade Art
----
+--- layout: default title: Razorblade Art ---
 <section class="container-fluid text-center">
 	<h1 class="site__title">Razorblade Art</h1>
 	<p class="site__subtitle">Acrylic - Mixed Media - Pen & Ink</p>
 	<br>
 	<div class="row">
 		{% for product in site.products %}
-			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-				<div class="product">
-					<a href="products/{{product.file}}" class="product__div"><img class="img-responsive center-block" src="{{product.image}}" onContextMenu="alert('Image Not Available.');return false"></a>
-					<div class="product__tagline">
-						<h4>{{product.title}}</h4>
-						<p>{{product.price}}</p>
-					</div>
+		<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+			<div class="product">
+				<a href="products/{{product.file}}" class="product__div"><img class="img-responsive center-block" src="{{product.image}}" onContextMenu="alert('Image Not Available.');return false"></a>
+				<div class="product__tagline">
+					<h4>{{product.title}}</h4>
+					<p>{{product.price}}</p>
 				</div>
-				<br>
 			</div>
+			<br>
+		</div>
 		{% endfor %}
 	</div>
 </section>
