--- a/products/caterpillar.html
+++ b/products/caterpillar.html
@@ -1,8 +1,1 @@
----
-layout: product
-title: The Caterpillar
-price: 20.00
-id: 4
-image: ../images/caterpillar.png
-file: caterpillar.html
----
+--- layout: product title: The Caterpillar price: 20.00 id: 4 image: ../images/caterpillar.png file: caterpillar.html ---
