--- a/products/court.html
+++ b/products/court.html
@@ -1,8 +1,1 @@
----
-layout: product
-title: The Little King's Court
-price: 20.00
-id: 5
-image: ../images/court.png
-file: court.html
----
+--- layout: product title: The Little King's Court price: 20.00 id: 5 image: ../images/court.png file: court.html ---
