--- a/products/joker.html
+++ b/products/joker.html
@@ -1,8 +1,1 @@
----
-layout: product
-title: Joker's Wild Ride
-price: 20.00
-id: 8
-image: ../images/joker.png
-file: joker.html
----
+--- layout: product title: Joker's Wild Ride price: 20.00 id: 8 image: ../images/joker.png file: joker.html ---
