--- a/products/nautilus.html
+++ b/products/nautilus.html
@@ -1,8 +1,1 @@
----
-layout: product
-title: Nautilus
-price: 20.00
-id: 11
-image: ../images/nautilus.png
-file: nautilus.html
----
+--- layout: product title: Nautilus price: 20.00 id: 11 image: ../images/nautilus.png file: nautilus.html ---
