--- a/products/queen.html
+++ b/products/queen.html
@@ -1,8 +1,1 @@
----
-layout: product
-title: The Queen Awaits
-price: 20.00
-id: 12
-image: ../images/queen.png
-file: queen.html
----
+--- layout: product title: The Queen Awaits price: 20.00 id: 12 image: ../images/queen.png file: queen.html ---
