--- a/products/redqueen.html
+++ b/products/redqueen.html
@@ -1,8 +1,1 @@
----
-layout: product
-title: The Red Queen
-price: 20.00
-id: 13
-image: ../images/redqueen.png
-file: redqueen.html
----
+--- layout: product title: The Red Queen price: 20.00 id: 13 image: ../images/redqueen.png file: redqueen.html ---
