--- a/products/summoning.html
+++ b/products/summoning.html
@@ -1,8 +1,1 @@
----
-layout: product
-title: The Summoning
-price: 20.00
-id: 18
-image: ../images/summoning.png
-file: summoning.html
----
+--- layout: product title: The Summoning price: 20.00 id: 18 image: ../images/summoning.png file: summoning.html ---
