--- a/products/teaparty.html
+++ b/products/teaparty.html
@@ -1,8 +1,1 @@
----
-layout: product
-title: Twisted Tea Party
-price: 20.00
-id: 19
-image: ../images/teaparty.png
-file: teaparty.html
----
+--- layout: product title: Twisted Tea Party price: 20.00 id: 19 image: ../images/teaparty.png file: teaparty.html ---
