--- a/products/trouble.html
+++ b/products/trouble.html
@@ -1,8 +1,1 @@
----
-layout: product
-title: Big Trouble
-price: 20.00
-id: 20
-image: ../images/trouble.png
-file: trouble.html
----
+--- layout: product title: Big Trouble price: 20.00 id: 20 image: ../images/trouble.png file: trouble.html ---
