--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,7 @@
----
-layout: default
-title: Razorblade Art - Contact
-class: navbar-fixed-bottom
----
+--- layout: default title: Razorblade Art - Contact class: navbar-fixed-bottom ---
 <div class="contact text-center">
-  <h1 class="contact__title">Contact</h1>
-  <div class="contact__text">
-    <p><strong>Questions? Comments? Interested in custom work?<br>Contact Jeremy<a href="mailto:JeremyHjort@gmail.com?Subject=Buisness" target="_top" class="contact__link"> JeremyHjort@gmail.com</a><br>He looks forward to it!</strong></p>
-  </div>
+    <h1 class="contact__title">Contact</h1>
+    <div class="contact__text">
+        <p><strong>Questions? Comments? Interested in custom work?<br>Contact Jeremy<a href="mailto:JeremyHjort@gmail.com?Subject=Buisness" target="_top" class="contact__link"> JeremyHjort@gmail.com</a><br>He looks forward to it!</strong></p>
+    </div>
 </div>
