--- a/products/alice.html
+++ b/products/alice.html
@@ -1,8 +1,1 @@
----
-layout: product
-title: Alice in Mourning
-price: 20.0
-id: 1
-image: ../images/alice.png
-file: alice.html
----
+--- layout: product title: Alice in Mourning price: 20.0 id: 1 image: ../images/alice.png file: alice.html ---
