--- a/products/avg.html
+++ b/products/avg.html
@@ -1,8 +1,1 @@
----
-layout: product
-title: AVG
-price: 20.00
-id: 2
-image: ../images/avg.png
-file: avg.html
----
+--- layout: product title: AVG price: 20.00 id: 2 image: ../images/avg.png file: avg.html ---
