--- a/products/betrayal.html
+++ b/products/betrayal.html
@@ -1,8 +1,1 @@
----
-layout: product
-title: The Betrayal of The King
-price: 20.00
-id: 3
-image: ../images/betrayal.png
-file: betrayal.html
----
+--- layout: product title: The Betrayal of The King price: 20.00 id: 3 image: ../images/betrayal.png file: betrayal.html ---
