--- a/products/dallas.html
+++ b/products/dallas.html
@@ -1,8 +1,1 @@
----
-layout: product
-title: As Dallas Burns
-price: 20.00
-id: 6
-image: ../images/dallas.png
-file: dallas.html
----
+--- layout: product title: As Dallas Burns price: 20.00 id: 6 image: ../images/dallas.png file: dallas.html ---
