--- a/products/greatowl.html
+++ b/products/greatowl.html
@@ -1,8 +1,1 @@
----
-layout: product
-title: The Great Owl
-price: 20.00
-id: 7
-image: ../images/greatowl.png
-file: greatowl.html
----
+--- layout: product title: The Great Owl price: 20.00 id: 7 image: ../images/greatowl.png file: greatowl.html ---
