--- a/products/king.html
+++ b/products/king.html
@@ -1,8 +1,1 @@
----
-layout: product
-title: Sad King
-price: 20.00
-id: 9
-image: ../images/king.png
-file: king.html
----
+--- layout: product title: Sad King price: 20.00 id: 9 image: ../images/king.png file: king.html ---
