--- a/products/krang.html
+++ b/products/krang.html
@@ -1,8 +1,1 @@
----
-layout: product
-title: Here Comes Krang
-price: 20.00
-id: 10
-image: ../images/krang.png
-file: krang.html
----
+--- layout: product title: Here Comes Krang price: 20.00 id: 10 image: ../images/krang.png file: krang.html ---
