--- a/products/sea.html
+++ b/products/sea.html
@@ -1,8 +1,1 @@
----
-layout: product
-title: Risen From The Sea
-price: 20.00
-id: 14
-image: ../images/sea.png
-file: sea.html
----
+--- layout: product title: Risen From The Sea price: 20.00 id: 14 image: ../images/sea.png file: sea.html ---
