--- a/products/secret.html
+++ b/products/secret.html
@@ -1,8 +1,1 @@
----
-layout: product
-title: Nicodemus' Secret
-price: 20.00
-id: 15
-image: ../images/secret.png
-file: secret.html
----
+--- layout: product title: Nicodemus' Secret price: 20.00 id: 15 image: ../images/secret.png file: secret.html ---
