--- a/products/sector.html
+++ b/products/sector.html
@@ -1,8 +1,1 @@
----
-layout: product
-title: Sector 3401-78B
-price: 20.00
-id: 16
-image: ../images/sector.png
-file: sector.html
----
+--- layout: product title: Sector 3401-78B price: 20.00 id: 16 image: ../images/sector.png file: sector.html ---
