--- a/products/steampunk.html
+++ b/products/steampunk.html
@@ -1,8 +1,1 @@
----
-layout: product
-title: Dr. Steampunk
-price: 20.00
-id: 17
-image: ../images/steampunk.png
-file: steampunk.html
----
+--- layout: product title: Dr. Steampunk price: 20.00 id: 17 image: ../images/steampunk.png file: steampunk.html ---
