--- a/products/tweedles.html
+++ b/products/tweedles.html
@@ -1,8 +1,1 @@
----
-layout: product
-title: The Tweedle Brothers
-price: 20.00
-id: 21
-image: ../images/tweedles.png
-file: tweedles.html
----
+--- layout: product title: The Tweedle Brothers price: 20.00 id: 21 image: ../images/tweedles.png file: tweedles.html ---
